@@ -55,11 +55,13 @@
             </position_transform_filter>
          </position_filters>
       </position_proxy>
-      <vrpn name="Vrpn" version="1">
+      <vrpn name="Vrpn" version="2">
          <tracker_server>Tracker0@alpha.cs.ucl.ac.uk</tracker_server>
          <button_server>Button0@alpha.cs.ucl.ac.uk</button_server>
+         <analog_server>Analog0@alpha.cs.ucl.ac.uk</analog_server>
          <tracker_count>2</tracker_count>
          <button_count>4</button_count>
+         <analog_count>0</analog_count>
          <position_filters>
             <position_transform_filter name="Position Filters" version="1">
                <pre_translate>0.0</pre_translate>
