@@ -16,13 +16,71 @@
          <value label="Button Server" defaultvalue="Button0@localhost"/>
       </property>
       <property valuetype="integer" variable="false" name="tracker_count">
-         <help>Number of trackers supported by Vrpn server. (&lt;a href="http://www.infiscape.com/~patrick/vrjuggler-config/2.0/configuring_vr_juggler/apcs02.html"&gt;more ...&lt;/a&gt;)</help>
+         <help>Number of trackers supported by VRPN server. (&lt;a href="http://www.infiscape.com/~patrick/vrjuggler-config/2.0/configuring_vr_juggler/apcs02.html"&gt;more ...&lt;/a&gt;)</help>
          <value label="Number of trackers" defaultvalue="2"/>
       </property>
       <property valuetype="integer" variable="false" name="button_count">
-         <help>Number of buttons supported by Vrpn server. (&lt;a href="http://www.infiscape.com/~patrick/vrjuggler-config/2.0/configuring_vr_juggler/apcs02.html"&gt;more ...&lt;/a&gt;)</help>
+         <help>Number of buttons supported by VRPN server. (&lt;a href="http://www.infiscape.com/~patrick/vrjuggler-config/2.0/configuring_vr_juggler/apcs02.html"&gt;more ...&lt;/a&gt;)</help>
          <value label="Number of buttons" defaultvalue="1"/>
       </property>
       <upgrade_transform/>
+   </definition_version>
+   <definition_version version="2" label="VRPN">
+      <abstract>false</abstract>
+      <help>Configure an interface to an external VRPN server. (&lt;a href="http://www.infiscape.com/~patrick/vrjuggler-config/2.0/configuring_vr_juggler/apcs02.html"&gt;more on VRPN&lt;/a&gt;, &lt;a href="http://www.infiscape.com/~patrick/vrjuggler-config/2.0/configuring_vr_juggler/ch02.html"&gt;more on input devices&lt;/a&gt;)</help>
+      <parent>positional_device</parent>
+      <parent>digital_device</parent>
+      <parent>analog_device</parent>
+      <category>/Devices</category>
+      <property valuetype="string" variable="false" name="tracker_server">
+         <help>Tracker server. (&lt;a href="http://www.infiscape.com/~patrick/vrjuggler-config/2.0/configuring_vr_juggler/apcs02.html"&gt;more ...&lt;/a&gt;)</help>
+         <value label="Tracker Server" defaultvalue="Tracker0@localhost"/>
+      </property>
+      <property valuetype="string" variable="false" name="button_server">
+         <help>Button server. (&lt;a href="http://www.infiscape.com/~patrick/vrjuggler-config/2.0/configuring_vr_juggler/apcs02.html"&gt;more ...&lt;/a&gt;)</help>
+         <value label="Button Server" defaultvalue="Button0@localhost"/>
+      </property>
+      <property valuetype="string" variable="false" name="analog_server">
+         <help>Analog server. (&lt;a href="http://www.infiscape.com/~patrick/vrjuggler-config/2.0/configuring_vr_juggler/apcs02.html"&gt;more ...&lt;/a&gt;)</help>
+         <value label="Analog Server" defaultvalue="Analog@localhost"/>
+      </property>
+      <property valuetype="integer" variable="false" name="tracker_count">
+         <help>Number of trackers supported by VRPN server. (&lt;a href="http://www.infiscape.com/~patrick/vrjuggler-config/2.0/configuring_vr_juggler/apcs02.html"&gt;more ...&lt;/a&gt;)</help>
+         <value label="Number of trackers" defaultvalue="2"/>
+      </property>
+      <property valuetype="integer" variable="false" name="button_count">
+         <help>Number of buttons supported by VRPN server. (&lt;a href="http://www.infiscape.com/~patrick/vrjuggler-config/2.0/configuring_vr_juggler/apcs02.html"&gt;more ...&lt;/a&gt;)</help>
+         <value label="Number of buttons" defaultvalue="1"/>
+      </property>
+      <property valuetype="integer" variable="false" name="analog_count">
+         <help>Number of analog inputs supported by VRPN server. (&lt;a href="http://www.infiscape.com/~patrick/vrjuggler-config/2.0/configuring_vr_juggler/apcs02.html"&gt;more ...&lt;/a&gt;)</help>
+         <value label="Number of analogs" defaultvalue="1"/>
+      </property>
+      <upgrade_transform>
+         <xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:jconf="http://www.vrjuggler.org/jccl/xsd/3.0/configuration" version="1.0">
+            <xsl:output method="xml" version="1.0" encoding="UTF-8" indent="yes"/>
+            <xsl:variable name="jconf">http://www.vrjuggler.org/jccl/xsd/3.0/configuration</xsl:variable>
+
+            <xsl:template match="/">
+                <xsl:apply-templates/>
+            </xsl:template>
+
+            <xsl:template match="jconf:vrpn">
+               <xsl:element namespace="{$jconf}" name="vrpn">
+                  <xsl:attribute name="name">
+                     <xsl:value-of select="@name"/>
+                  </xsl:attribute>
+                  <xsl:attribute name="version">2</xsl:attribute>
+                  <xsl:copy-of select="./*"/>
+                  <xsl:element namespace="{$jconf}" name="analog_server">
+                     <xsl:text>Analog@localhost</xsl:text>
+                  </xsl:element>
+                  <xsl:element namespace="{$jconf}" name="analog_count">
+                     <xsl:text>1</xsl:text>
+                  </xsl:element>
+               </xsl:element>
+            </xsl:template>
+         </xsl:stylesheet>
+      </upgrade_transform>
    </definition_version>
 </definition>
